# fastapi-proxied

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/demo/: __init__.py  other.py  proxied_app.py  proxy_middleware.py  routed_app.py  simple_app.py
src/fastapi_proxied/: __init__.py  mounted_app.py  proxied_app.py  proxy_middleware.py
tests/: conftest.py  test_mounted.py  test_proxied.py  test_routed.py  test_simple.py
