[project]
name = "fastapi-proxied"
description = "A FastAPI middleware for handling proxies that don't rewrite the url path"
authors = [{name = "Дамјан Георгиевски", email = "gdamjan@gmail.com"}]
dependencies = [
    "fastapi>=0.99.1",
    "uvicorn>=0.22.0",
]
requires-python = ">=3.10"
readme = {file = "README.md", content-type="text/markdown"}
license = {file = "LICENSE"}
#dynamic = ["version"]
version = "0.0.0"

[tool.uv]
dev-dependencies = [
    "httpx>=0.27.2",
    "pytest>=8.3.3",
]

[project.urls]
Homepage = "https://github.com/gdamjan/fastapi-proxied/"
Repository = "https://github.com/gdamjan/fastapi-proxied.git"
Issues = "https://github.com/gdamjan/fastapi-proxied/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
