[project]
name = "demo"
description = "A FastAPI middleware for handling proxies that don't rewrite the url path"
version = "0.0.0"
authors = [{name = "Дамјан Георгиевски", email = "gdamjan@gmail.com"}]
requires-python = ">=3.10"
readme = "README.md"
license-files = ["LICENSE"]

dependencies = [
    "fastapi>=0.115.6",
    "starlette>=0.41.3",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.4",
]

[project.urls]
Homepage = "https://github.com/gdamjan/fastapi-proxied/"
Repository = "https://github.com/gdamjan/fastapi-proxied.git"
Issues = "https://github.com/gdamjan/fastapi-proxied/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

